--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MusicList"></activity>
+        <activity android:name=".Listed.MusicList"></activity>
         <activity android:name=".Introduction.IntroductionMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
